--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.koushikdutta.ion:ion:2.1.8'
+    compile 'com.android.volley:volley:1.0.0'
+
 }
